# controllers/series-controller.go
@@ -6,6 +6,7 @@ import (
 	"github.com/Trabajo-Profesional-INA-Monitoreo/series-api/services"
 	"github.com/gin-gonic/gin"
 	"net/http"
+	"strconv"
 	"time"
 )
 
@@ -18,6 +19,7 @@ type SeriesController interface {
 	GetCuredSerieById(ctx *gin.Context)
 	GetObservatedSerieById(ctx *gin.Context)
 	GetPredictedSerieById(ctx *gin.Context)
+	GetStreamDataById(ctx *gin.Context)
 }
 
 type seriesController struct {
@@ -56,6 +58,7 @@ func (s seriesController) GetStations(ctx *gin.Context) {
 //	@Produce		json
 //	@Param          timeStart    query     string  false  "Fecha de comienzo del periodo - valor por defecto: 7 dias atras"  Format(2006-01-02)
 //	@Param          timeEnd      query     string  false  "Fecha del final del periodo - valor por defecto: 5 dias despues"  Format(2006-01-02)
+//	@Param          serie_id     path      int     true  "ID de la serie"
 //	@Success		200	{object} dtos.StreamsDataResponse
 //	@Failure        400  {object}  dtos.ErrorResponse
 //	@Router			/series/curadas/{serie_id} [get]
@@ -90,13 +93,14 @@ func (s seriesController) GetCuredSerieById(ctx *gin.Context) {
 //	@Produce		json
 //	@Param          timeStart    query     string  false  "Fecha de comienzo del periodo - valor por defecto: 7 dias atras"  Format(2006-01-02)
 //	@Param          timeEnd      query     string  false  "Fecha del final del periodo - valor por defecto: mañana"  Format(2006-01-02)
+//	@Param          serie_id     path      int     true  "ID de la serie"
 //	@Success		200	{object} dtos.StreamsDataResponse
 //	@Failure        400  {object}  dtos.ErrorResponse
 //	@Router			/series/observadas/{serie_id} [get]
 func (s seriesController) GetObservatedSerieById(ctx *gin.Context) {
 	id, userSentId := ctx.Params.Get("serie_id")
 	if !userSentId {
-		ctx.JSON(http.StatusBadRequest, dtos.NewErrorResponse(fmt.Errorf("Id was not send")))
+		ctx.JSON(http.StatusBadRequest, dtos.NewErrorResponse(fmt.Errorf("serie_id was not send")))
 		return
 	}
 	timeStartQuery := ctx.DefaultQuery("timeStart", time.Now().Add(-DaysPerWeek*HoursPerDay*time.Hour).Format(time.DateOnly))
@@ -121,16 +125,69 @@ func (s seriesController) GetObservatedSerieById(ctx *gin.Context) {
 //
 //	@Summary		Endpoint para obtener los valores de una serie pronosticadas por id
 //	@Produce		json
+//	@Param          calibrado_id     path      int     true  "ID del calibrado"
 //	@Success		200	{object} dtos.CalibratedStreamsDataResponse
 //	@Failure        400  {object}  dtos.ErrorResponse
 //	@Router			/series/pronosticadas/{calibrado_id} [get]
 func (s seriesController) GetPredictedSerieById(ctx *gin.Context) {
 	id, userSentId := ctx.Params.Get("calibrado_id")
 	if !userSentId {
-		ctx.JSON(http.StatusBadRequest, dtos.NewErrorResponse(fmt.Errorf("Id was not send")))
+		ctx.JSON(http.StatusBadRequest, dtos.NewErrorResponse(fmt.Errorf("calibrado_id was not sent")))
 		return
 	}
 	res := s.seriesService.GetPredictedSerieById(id)
 
 	ctx.JSON(http.StatusOK, res)
+}
+
+// GetStreamDataById godoc
+//
+//		@Summary		Endpoint para obtener los datos de una serie dado un id y su configuracion
+//		@Produce		json
+//		@Param          configuredStreamId      query     string  true  "Id de la configuracion de la serie"  Format(string)
+//		@Param          timeStart    query     string  false  "Fecha de comienzo del periodo - valor por defecto: 7 dias atras"  Format(2006-01-02)
+//		@Param          timeEnd      query     string  false  "Fecha del final del periodo - valor por defecto: mañana"  Format(2006-01-02)
+//	    @Param          serie_id     path      int     true  "ID de la serie"
+//		@Success		200	{object} dtos.StreamData
+//		@Failure        400  {object}  dtos.ErrorResponse
+//		@Router			/series/{serie_id} [get]
+func (s seriesController) GetStreamDataById(ctx *gin.Context) {
+	streamIdParam, userSentId := ctx.Params.Get("serie_id")
+	if !userSentId {
+		ctx.JSON(http.StatusBadRequest, dtos.NewErrorResponse(fmt.Errorf("serie_id was not sent")))
+		return
+	}
+	configIdParam, userSentConfigId := ctx.GetQuery("configuredStreamId")
+	if !userSentConfigId {
+		ctx.JSON(http.StatusBadRequest, dtos.NewErrorResponse(fmt.Errorf("configuredStreamId was not sent")))
+		return
+	}
+	streamId, err := strconv.ParseUint(streamIdParam, 10, 64)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, dtos.NewErrorResponse(fmt.Errorf("serie_id should be a number")))
+		return
+	}
+	configId, err := strconv.ParseUint(configIdParam, 10, 64)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, dtos.NewErrorResponse(fmt.Errorf("configuredStreamId should be a number")))
+		return
+	}
+	timeStartQuery := ctx.DefaultQuery("timeStart", time.Now().Add(-DaysPerWeek*HoursPerDay*time.Hour).Format(time.DateOnly))
+	timeEndQuery := ctx.DefaultQuery("timeEnd", time.Now().Add(DaysDefaultObservated*HoursPerDay*time.Hour).Format(time.DateOnly))
+	timeStart, err := time.Parse(time.DateOnly, timeStartQuery)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, dtos.NewErrorResponse(fmt.Errorf("error parsing time: %v", err)))
+		return
+	}
+	timeEnd, err := time.Parse(time.DateOnly, timeEndQuery)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, dtos.NewErrorResponse(fmt.Errorf("error parsing time: %v", err)))
+		return
+	}
+	streamData, err := s.seriesService.GetStreamData(streamId, configId, timeStart, timeEnd)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, dtos.NewErrorResponse(err))
+		return
+	}
+	ctx.JSON(http.StatusOK, streamData)
 }
