# dtos/metric-card.go
@@ -1,0 +1,6 @@
+package dtos
+
+type MetricCard struct {
+	Name  string
+	Value float64
+}
